# detect_locate

src/camera_locate/: CMakeLists.txt  package.xml
src/camera_locate/config/: CALIBRATE.txt  fly_camera.yaml  gazebo_camera.yaml
src/camera_locate/launch/: camera_locte_fly.launch  camera_locte_gazebo.launch  camera_locte_gazebo_5-6.launch
src/camera_locate/scripts/: cam_pos.py  car_rtk.py  gazebo_ugv_pos.py  locate_fly.py  locate_gazebo.py  uav_rtk.py
src/gambal_control/: CMakeLists.txt  package.xml
src/gambal_control/include/gambal_control/: CameraAttitudeReader.hpp  CameraTracker.h  CameraTracker.hpp  ClientSocket.h  Socket.h  TcpSerial.h  TcpSerial.hpp  detect_cb.h  gimbal_control.h
src/gambal_control/launch/: gambal_control.launch  gambal_control_gazebo.launch
src/gambal_control/src/: ClientSocket.cpp  Socket.cpp  control.cpp  control_gazebo.cpp
src/grtk/: CMakeLists.txt  package.xml
src/grtk/msg/: GNGGA.msg  GPNTR.msg
src/grtk/scripts/: GNGGA.py  GPHDT.py  GPNTR.py  KSXT.py  rtk.txt
src/tfmini_ros/launch/: tfmini.launch
src/tfmini_ros/src/: TFmini_ros_node.cpp
src/yolov5_detect/: CMakeLists.txt
src/yolov5_detect/launch/: img_show_save.launch  yolov5_detect_fly.launch  yolov5_detect_gazebo.launch  yolov5_detect_gazebo_1-4.launch  yolov5_detect_gazebo_11-12.launch  yolov5_detect_gazebo_5-6.launch  yolov5_detect_gazebo_7-8.launch  yolov5_detect_gazebo_9-10.launch
src/yolov5_detect/msg/: detect.msg
src/yolov5_detect/src/: img_show_save.cpp  video.cpp  yolov5_detect_fly.cpp  yolov5_detect_fly_video.cpp  yolov5_detect_gazebo.cpp
(+2 files in other folders)
